Update fetchModelResults name and optimize highlight result handle
Signed-off-by: Junqiu Lei <junqiu@amazon.com>